2004-11-23  Sebastien Pouliot  <sebastien@ximian.com>

	* PKCS1.cs: Fix PKCS#1 v1.5 decryption when the ciphertext isn't 
	exactly the same of the public key (which happens sometimes on Fx 1.1
	probably because it doesn't do the last I2OSP operation to left pad
	the resulting big integer with zeros).

2004-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyPairPersistence.cs: Added localization for exceptions messages.
	Also added more details (type and path) when an exception is thrown.

2004-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* RSAManaged.cs: KeySize is always a multiple of 8 bits (promotion to
	a bigger size if required) to match MS implementation (and other 
	issues like SSL).

2004-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Fixed warning (l4) for unused variables.
	* KeyPairPersistence.cs: Fixed warning (l4) for unused variable.
	* PKCS1.cs: Added empty {} to fix warning about possible empty stmnt.

2004-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MACAlgorithm.cs: Removed the hardcoded PaddingMode.Zeros as this is 
	now selectable in Fx 2.0.
	* SymmetricTransform.cs: Throw CryptographicException when CipherMode
	CTS or OFB is being used (to match MS implementation).

2004-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricTransform.cs: Reduce by one the number of block when 
	decrypting. This operation was in CryptoStream before but is only
	required for decryption (which CryptoStream can't know). 
	Fix bug #60573.

2004-05-27  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricTransform.cs: Fixed possible integer overflow. Added 
	missing exception handling in TransformBlock and TransformFinalBlock.

2004-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Synched with Mono.Security.dll. Fix bug #57941 
	(truncated key pair).
	* RSAManaged.cs: Synched with Mono.Security.dll. Fix bug #57941 
	(truncated key pair).

2004-04-28  Sebastien Pouliot  <sebastien@ximian.com>
